[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/dynamicFont.tres" type="DynamicFont" id=2]

[node name="Menu" type="Panel"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 1 )

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -40.0
margin_right = 150.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 2 )
text = "Jogar"

[node name="ConfigurationsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = 110.0
margin_right = 125.0
margin_bottom = 190.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 2 )
text = "Configurações"

[node name="CreditsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 220.0
margin_right = 100.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 2 )
text = "Créditos"

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 330.0
margin_right = 75.0
margin_bottom = 410.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 2 )
text = "Sair"

